--- a/Parcial_1/Parcial_1/Parcial_1.cbp
+++ b/Parcial_1/Parcial_1/Parcial_1.cbp
@@ -31,9 +31,21 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Clientes.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Clientes.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="pedidos.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="pedidos.h" />
+		<Unit filename="utn.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="utn.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
